# libopencm3-stm32-example

./: .gitignore  CMakeLists.txt  PER_Bootloader_COMB.hex
cmake/: arm-toolchain.cmake  libopencm3.cmake
linker/: application_config.ld  bootloader_config.ld  stm32f429i-disco.ld
src/: CMakeLists.txt  app.c  boot_startup.s  bootloader.c  main.c
